--- a/package.json
+++ b/package.json
@@ -4,10 +4,13 @@
   "private": true,
   "type": "module",
   "description": "Starter template to get up and running quickly with Vue and Storybook",
-  "author": "Chromatic <https://chromatic.com/>",
+  "author": {
+    "name": "Chromatic",
+    "email": "https://chromatic.com/"
+  },
   "repository": {
     "type": "git",
-    "url": "https://github.com/chromaui/intro-storybook-vue-template"
+    "url": "git+https://github.com/chromaui/intro-storybook-vue-template.git"
   },
   "bugs": {
     "url": "https://github.com/chromaui/intro-storybook-vue-template/issues"
@@ -21,7 +24,8 @@
     "format": "prettier --write src/",
     "storybook": "storybook dev -p 6006",
     "build-storybook": "storybook build",
-    "init-msw": "msw init public/"
+    "init-msw": "msw init public/",
+    "chromatic": "npx chromatic --project-token=chpt_df299ac301e3564"
   },
   "dependencies": {
     "pinia": "^2.3.0",
@@ -39,6 +43,7 @@
     "@storybook/vue3-vite": "^8.3.2",
     "@vitejs/plugin-vue": "^5.0.4",
     "@vue/eslint-config-prettier": "^9.0.0",
+    "chromatic": "^11.22.0",
     "eslint": "^8.57.0",
     "eslint-plugin-storybook": "^0.8.0",
     "eslint-plugin-vue": "^9.23.0",
@@ -50,5 +55,6 @@
   },
   "resolutions": {
     "jackspeak": "2.1.1"
-  }
+  },
+  "homepage": "https://github.com/chromaui/intro-storybook-vue-template#readme"
 }
